--- a/index.html
+++ b/index.html
@@ -1,2 +1,30 @@
-# wilburritocodes.github.io
-Project website
+<!DOCTYPE html>
+<html>
+<head>
+<title> Life and Crimes of Ian Modina </title>
+</head>
+<body>
+ <style>
+h1 {color:red}
+</style>
+ <h1> ian santino modina is currently being held in Alcatraz</h1>
+ <p> <strong> About the man, the myth, the legend </strong> </p>
+<p> ian modina is currently being held in maximum security prison on alcatraz under charges of capital offense for espionage with no chance for parole </p>
+<p> a mugshot of modina can be found on a confidential file on google slides</p>
+<p> ian partook in an illegal reserach of shalam colony under dr. shea </p>
+
+<p> <strong> Early Beginnings </strong> </p>
+<p> ian santino modina was born on august 25, 2010 </p>
+<p> he was born into a upper class family with 2 loving parents and 3 siblings </p>
+<p> as a child and young adult, he was negatively influenced by bad social crowds and crime/violence
+<p> along with fellow peers as accomplices, they caused disturbances in their neighborhood and committed small offenses and crimes
+<p> this landed ian in juvenile prison </p>
+<h2> Adulthood </h2>
+<p> in order to turn a new leaf, ian modina began his life of espionage for the Malaysian government </p>
+<p> it was here that ian modina found a new way to live </p>
+<a href=https://docs.google.com/presentation/d/1xOVGjdhUpKXHJcCnAnbuQ6QKKagRYwlgWm537Sgwosw/edit?slide=id.p#slide=id.p> click here for ian's released mugshot </a>
+<style>
+body{background-color:beige;}
+</style>
+</body>
+</html>
