--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@ h1 {color:orange;}
 <button> Click here for statlines </button>
 </a>
 
-<img src="https://images.pexels.com/photos/2169302/pexels-photo-2169302.jpeg" /img>
+<img src="https://images.pexels.com/photos/2169302/pexels-photo-2169302.jpeg" 
+style="width:400px; height:auto; border-radius:10px; margin-top:20px;" />
 
  Credits:
     </br> Photo by <a href="https://images.pexels.com/photos/2169302/pexels-photo-2169302.jpeg"> Edgar Colomba </a> on <a href="https://images.pexels.com/photos/2169302/pexels-photo-2169302.jpeg">Pexels</a>
